--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <script type="text/javascript" src="src/useStateExample.js"></script>
     <script type="text/javascript" src="src/useEffectExample.js"></script>
+    <script type="text/javascript" src="src/customHooks.js"></script>
   </head>
 
   <body>
@@ -25,6 +26,13 @@
           <button id="decrement">Pause</button>
           <span id="count">Count 0</span>
           <span id="effectCount"></span>
+        </div>
+      </main>
+      <main>
+        <h3>customHooks</h3>
+        <div id="customHooks">
+          <button id="callHook">call Hook</button>
+          <span id="value">Text</span>
         </div>
       </main>
     </div>
